docs/v1.1.1/guides/wallets/accounts.mdx
---
title: "Understanding Accounts & Addresses"
sidebarTitle: "Accounts & addresses"
description: "Beginner-friendly guide to Parallax accounts, addresses, and keys."
---

To use the Parallax network, you need an **account**. Accounts are how you **hold Parallax coins**, **send and receive transactions**, and **interact with the blockchain**.

This guide explains what accounts are, how they work, and how to create one safely.

---

## What is an Account?

A Parallax account has two important parts:

- **Public Address** → This is your “bank account number.”  
  - Example: `0x1234...abcd`  
  - Safe to share with others so they can send you Laxes.  

- **Private Key** → This is your secret password.  
  - Example: `0xabcdef1234567890...`  
  - Must **never** be shared with anyone. Whoever has it controls your funds.  

Together, the address and private key let you prove ownership of your coins.

---

## How to Create an Account

There are several ways to create a Parallax account:

<Steps>
  <Step title="Using MetaMask (recommended)">
    The easiest way is through [MetaMask](./metamask).  

    - When you install MetaMask, it generates a **wallet** with one or more addresses.  
    - MetaMask secures your keys behind a **seed phrase** (12 words).  
    - Write down your seed phrase and keep it offline in a safe place.  
  </Step>

  <Step title="Using the Parallax client">
    You can also create an account directly with the Parallax client:

    ```bash
    ./prlx account new
    ```

    You’ll be asked to set a password.  
    The account file (keystore) will be saved in your data directory:
    - Windows: `%LOCALAPPDATA%\Parallax\keystore`  
    - macOS: `~/Library/Parallax/keystore`  
    - Linux: `~/.parallax/keystore`  

    ⚠️ **Important:** Always back up your keystore file and password securely.
  </Step>

  <Step title="Using parallaxkey (advanced)">
    Advanced users can use the `parallaxkey` utility included in the release package to generate keys manually. This is usually not necessary for beginners.
  </Step>
</Steps>

---

## Sending & Receiving Laxes

- To **receive LAX**, share your **public address** with the sender.  
- To **send LAX**, use MetaMask or the client to sign a transaction with your **private key**.  

All transactions are recorded permanently on the blockchain and can be viewed in the [Parallax Explorer](https://explorer.parallaxprotocol.org).

---

## Security Best Practices

- **Never share your private key or seed phrase** with anyone.  
- **Back up your keys** in multiple safe places (preferably offline).  
- Use a **strong password** when creating accounts with the client.  
- Consider a **hardware wallet** in the future for added security (support coming soon).  

---

✨ You now know the basics of accounts and addresses in Parallax! Next, try [Sending and Receiving LAX](./send-and-reveive) to make your first transaction.
